# cookiecutter-poetry

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  codecov.yaml  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/.devcontainer/: devcontainer.json
{{cookiecutter.project_name}}/.github/actions/install-poetry/: action.yml
{{cookiecutter.project_name}}/.github/actions/setup-poetry-env/: action.yml
{{cookiecutter.project_name}}/.github/workflows/: cleanup_cache.yml  deploy_dev.yml  deploy_prod.yml  pull_request.yml  push.yml  validate-codecov-config.yml
{{cookiecutter.project_name}}/docs/: index.md
{{cookiecutter.project_name}}/docs/content/: getting-started.md
